--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form>
+<form th:action="@{/login}" method="post">
     <h2>Login</h2>
     <div>
         <label for="username">Username:</label>
