--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-
+<div class="content">
+    <h2>Welcome to the Exam Page</h2>
+    <p>Logged in as: <span th:text="${#authentication.name}"></span></p>
+    <a href="/logout">Logout</a>
+</div>
 </body>
 </html>
