--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-<header>
-
+<header th:replace="fragments/navbar :: navbar"></header>
 <main>
     <section>
         <H2>Hello there</H2>
