--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
+<header th:replace="fragments/navbar :: navbar"></header>
+<main>
 <div class="content">
     <h2>Welcome to the Exam Page</h2>
     <p>Logged in as: <span th:text="${#authentication.name}"></span></p>
     <a href="/logout">Logout</a>
 </div>
+</main>
 </body>
 </html>
