--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-
+<header th:replace="fragments/navbar :: navbar"></header>
+<main>
 <form th:action="@{/login}" method="post">
     <h2>Login</h2>
     <div>
@@ -24,5 +25,6 @@
         <button type="submit">Login</button>
     </div>
 </form>
+</main>
 </body>
 </html>
