--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -9,10 +9,7 @@
 <body>
 <header th:replace="fragments/navbar :: navbar"></header>
 <main>
-<div class="content">
-    <h2>Welcome to the Exam Page</h2>
-    <p>Logged in as: <span th:text="${#authentication.name}"></span></p>
-    <a href="/logout">Logout</a>
+<div class="exam">
 </div>
 </main>
 </body>
