--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -17,8 +17,12 @@
             <div class="question" id="question"></div>
             <div class="options" id="options"></div>
         </div>
-        <button class="next-btn" onclick="nextQuestion()">Next</button>
     </div>
+    <div class="quiz-info">
+        <div id="basic-question-number"></div>
+        <div id="specialization-question-number"></div>
+    </div>
+    <button class="next-btn" id="next" onclick="nextQuestion()">Next</button>
     <script type="text/javascript">
         const category = "[[${category}]]"; "";
         console.log("Category:", category);
