--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -21,6 +21,10 @@
     <div class="quiz-info">
         <div id="basic-question-number"></div>
         <div id="specialization-question-number"></div>
+        <div id="timer-container">
+            <div id="info-timer"></div>
+            <div id="time"></div>
+        </div>
     </div>
     <button class="next-btn" id="next" onclick="nextQuestion()">Next</button>
     <script type="text/javascript">
