--- a/src/main/resources/static/css/quiz.css
+++ b/src/main/resources/static/css/quiz.css
@@ -24,6 +24,11 @@ button {
     width: 100%;
 }
 
+
+.functional-button{
+    width:90%;
+}
+
 button:hover {
     background-color: #45a049;
 }
@@ -42,4 +47,64 @@ button.selected {
 
 button.selected:hover {
     background-color: #4cae4c;
+}
+
+.abc-button{
+    margin: 4px;
+}
+.yn-button{
+    margin: 4px;
+}
+
+.options{
+display: flex;
+flex-direction: row;
+}
+
+.options-wrapped{
+flex-wrap:wrap;
+}
+
+#media-container{
+background-color:green;
+height: 65vh;
+margin:auto;
+margin-bottom: 10px;
+}
+.quiz-container{
+width:75%;
+margin:auto;
+}
+
+.quiz-info{
+    width: 10%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 5px;
+}
+.app-container{
+    display:flex;
+    flex-direction: row;
+}
+
+.bar-container {
+    position: relative;
+    width: 100%;
+    height: 20px;
+    background-color: #ddd;
+}
+.bar{
+    width: 50%;
+    height: 20px;
+    background-color: #04AA6D;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+.question-num{
+    position: relative;
+    margin:auto;
 }
