--- a/src/main/resources/static/css/quiz.css
+++ b/src/main/resources/static/css/quiz.css
@@ -33,27 +33,18 @@ button:hover {
     background-color: #45a049;
 }
 
-button:focus {
-    outline: none;
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
-}
 
-button.selected {
-    background-color: #5cb85c;
-    color: white;
-    transform: scale(1.05);
-    border: 1px solid #218838;
-}
-
-button.selected:hover {
-    background-color: #4cae4c;
+.button-selected {
+     background-color: #8BC34A;
+     color: white;
+     transform: scale(1.05);
 }
 
 .abc-button{
-    margin: 4px;
+    margin: 10px;
 }
 .yn-button{
-    margin: 4px;
+    margin: 10px;
 }
 
 .options{
@@ -66,15 +57,30 @@ flex-wrap:wrap;
 }
 
 #media-container{
-background-color:green;
-height: 65vh;
-margin:auto;
-margin-bottom: 10px;
+  height: 450px;
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  margin-top:20px;
 }
+
+#media-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+#media-container video{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .quiz-container{
 width:75%;
 margin:auto;
 }
+
 
 .quiz-info{
     width: 10%;
