--- a/src/main/resources/static/css/quiz.css
+++ b/src/main/resources/static/css/quiz.css
@@ -110,6 +110,11 @@ margin:auto;
     top: 0;
     left: 0;
   }
+
+#question{
+    font-size: 20px;
+}
+
 .question-num{
     position: relative;
     margin:auto;
