--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -16,7 +16,9 @@
             <div id="points"></div>
             <div id="question-container">
                 <div class="question" id="question"></div>
-                <div id="media-container"></div>
+                <div id="media-container">
+                    <img th:src="@{/images/click_to_load.png}" id="click-to-start">
+                </div>
                 <div class="options" id="options"></div>
             </div>
         </div>
